cluster/apps/monitoring/kube-prometheus-stack/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-stack-grafana
          port: 80
